# fractional-indexing-python

./: .gitignore  Makefile  README.md  fractional_indexing.py  pyproject.toml  setup.py  tests.py
.github/workflows/: test.yml
