[tool.poetry]
name = "fractional-indexing"
version = "0.1.0"
description = ""
authors = ["Jakub Roztocil <jakub@httpie.io>"]

[tool.poetry.dependencies]
python = ">=3.7, <4"
coverage = "^6.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
twine = "^3.8.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
